// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DialPad/> should render as closed 1`] = `
HTMLCollection [
  <div>
    <button
      class="wrapper wrapper medium secondary medium"
      data-testid="dial-pad-button"
      id="dial-pad-button"
    >
      <i
        class="material-icons icon"
      >
        dialpad
      </i>
    </button>
  </div>,
]
`;

exports[`<DialPad/> should render as open 1`] = `
HTMLCollection [
  <div>
    <button
      class="wrapper wrapper medium secondary medium"
      data-testid="dial-pad-button"
      id="dial-pad-button"
    >
      <i
        class="material-icons icon"
      >
        dialpad
      </i>
    </button>
  </div>,
  <div>
    <div
      class="fade"
    >
      <div
        class="popover show bs-popover-auto"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="popover-inner"
          role="tooltip"
        >
          <div
            class="popover-body"
          >
            <div
              class="container"
            >
              <div
                class="output"
              />
              <div
                class="row"
              >
                <div
                  class="digit"
                  data-digit="1"
                  data-testid="digit-1"
                  tabindex="0"
                >
                  1
                </div>
                <div
                  class="digit"
                  data-digit="2"
                  data-testid="digit-2"
                  tabindex="0"
                >
                  2
                  <div
                    class="details"
                  >
                    ABC
                  </div>
                </div>
                <div
                  class="digit"
                  data-digit="3"
                  data-testid="digit-3"
                  tabindex="0"
                >
                  3
                  <div
                    class="details"
                  >
                    DEF
                  </div>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="digit"
                  data-digit="4"
                  data-testid="digit-4"
                  tabindex="0"
                >
                  4
                  <div
                    class="details"
                  >
                    GHI
                  </div>
                </div>
                <div
                  class="digit"
                  data-digit="5"
                  data-testid="digit-5"
                  tabindex="0"
                >
                  5
                  <div
                    class="details"
                  >
                    JKL
                  </div>
                </div>
                <div
                  class="digit"
                  data-digit="6"
                  data-testid="digit-6"
                  tabindex="0"
                >
                  6
                  <div
                    class="details"
                  >
                    MNO
                  </div>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="digit"
                  data-digit="7"
                  data-testid="digit-7"
                  tabindex="0"
                >
                  7
                  <div
                    class="details"
                  >
                    PQRS
                  </div>
                </div>
                <div
                  class="digit"
                  data-digit="8"
                  data-testid="digit-8"
                  tabindex="0"
                >
                  8
                  <div
                    class="details"
                  >
                    TUV
                  </div>
                </div>
                <div
                  class="digit"
                  data-digit="9"
                  data-testid="digit-9"
                  tabindex="0"
                >
                  9
                  <div
                    class="details"
                  >
                    WXYZ
                  </div>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="digit"
                  data-digit="*"
                  data-testid="digit-*"
                  tabindex="0"
                >
                  *
                </div>
                <div
                  class="digit"
                  data-digit="0"
                  data-testid="digit-0"
                  tabindex="0"
                >
                  0
                  <div
                    class="details"
                  >
                    +
                  </div>
                </div>
                <div
                  class="digit"
                  data-digit="#"
                  data-testid="digit-#"
                  tabindex="0"
                >
                  #
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="arrow"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`<DialPad/> should render as open when 10 digits have been pressed 1`] = `
HTMLCollection [
  <div>
    <button
      class="wrapper wrapper medium secondary medium"
      data-testid="dial-pad-button"
      id="dial-pad-button"
    >
      <i
        class="material-icons icon"
      >
        dialpad
      </i>
    </button>
  </div>,
  <div>
    <div
      class="fade"
    >
      <div
        class="popover show bs-popover-auto"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="popover-inner"
          role="tooltip"
        >
          <div
            class="popover-body"
          >
            <div
              class="container"
            >
              <div
                class="output"
              >
                0123456789
              </div>
              <div
                class="row"
              >
                <div
                  class="digit"
                  data-digit="1"
                  data-testid="digit-1"
                  tabindex="0"
                >
                  1
                </div>
                <div
                  class="digit"
                  data-digit="2"
                  data-testid="digit-2"
                  tabindex="0"
                >
                  2
                  <div
                    class="details"
                  >
                    ABC
                  </div>
                </div>
                <div
                  class="digit"
                  data-digit="3"
                  data-testid="digit-3"
                  tabindex="0"
                >
                  3
                  <div
                    class="details"
                  >
                    DEF
                  </div>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="digit"
                  data-digit="4"
                  data-testid="digit-4"
                  tabindex="0"
                >
                  4
                  <div
                    class="details"
                  >
                    GHI
                  </div>
                </div>
                <div
                  class="digit"
                  data-digit="5"
                  data-testid="digit-5"
                  tabindex="0"
                >
                  5
                  <div
                    class="details"
                  >
                    JKL
                  </div>
                </div>
                <div
                  class="digit"
                  data-digit="6"
                  data-testid="digit-6"
                  tabindex="0"
                >
                  6
                  <div
                    class="details"
                  >
                    MNO
                  </div>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="digit"
                  data-digit="7"
                  data-testid="digit-7"
                  tabindex="0"
                >
                  7
                  <div
                    class="details"
                  >
                    PQRS
                  </div>
                </div>
                <div
                  class="digit"
                  data-digit="8"
                  data-testid="digit-8"
                  tabindex="0"
                >
                  8
                  <div
                    class="details"
                  >
                    TUV
                  </div>
                </div>
                <div
                  class="digit"
                  data-digit="9"
                  data-testid="digit-9"
                  tabindex="0"
                >
                  9
                  <div
                    class="details"
                  >
                    WXYZ
                  </div>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="digit"
                  data-digit="*"
                  data-testid="digit-*"
                  tabindex="0"
                >
                  *
                </div>
                <div
                  class="digit"
                  data-digit="0"
                  data-testid="digit-0"
                  tabindex="0"
                >
                  0
                  <div
                    class="details"
                  >
                    +
                  </div>
                </div>
                <div
                  class="digit"
                  data-digit="#"
                  data-testid="digit-#"
                  tabindex="0"
                >
                  #
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="arrow"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`<DialPad/> should render as open when 11 digits have been pressed 1`] = `
HTMLCollection [
  <div>
    <button
      class="wrapper wrapper medium secondary medium"
      data-testid="dial-pad-button"
      id="dial-pad-button"
    >
      <i
        class="material-icons icon"
      >
        dialpad
      </i>
    </button>
  </div>,
  <div>
    <div
      class="fade"
    >
      <div
        class="popover show bs-popover-auto"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="popover-inner"
          role="tooltip"
        >
          <div
            class="popover-body"
          >
            <div
              class="container"
            >
              <div
                class="output"
              >
                ...123456789#
              </div>
              <div
                class="row"
              >
                <div
                  class="digit"
                  data-digit="1"
                  data-testid="digit-1"
                  tabindex="0"
                >
                  1
                </div>
                <div
                  class="digit"
                  data-digit="2"
                  data-testid="digit-2"
                  tabindex="0"
                >
                  2
                  <div
                    class="details"
                  >
                    ABC
                  </div>
                </div>
                <div
                  class="digit"
                  data-digit="3"
                  data-testid="digit-3"
                  tabindex="0"
                >
                  3
                  <div
                    class="details"
                  >
                    DEF
                  </div>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="digit"
                  data-digit="4"
                  data-testid="digit-4"
                  tabindex="0"
                >
                  4
                  <div
                    class="details"
                  >
                    GHI
                  </div>
                </div>
                <div
                  class="digit"
                  data-digit="5"
                  data-testid="digit-5"
                  tabindex="0"
                >
                  5
                  <div
                    class="details"
                  >
                    JKL
                  </div>
                </div>
                <div
                  class="digit"
                  data-digit="6"
                  data-testid="digit-6"
                  tabindex="0"
                >
                  6
                  <div
                    class="details"
                  >
                    MNO
                  </div>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="digit"
                  data-digit="7"
                  data-testid="digit-7"
                  tabindex="0"
                >
                  7
                  <div
                    class="details"
                  >
                    PQRS
                  </div>
                </div>
                <div
                  class="digit"
                  data-digit="8"
                  data-testid="digit-8"
                  tabindex="0"
                >
                  8
                  <div
                    class="details"
                  >
                    TUV
                  </div>
                </div>
                <div
                  class="digit"
                  data-digit="9"
                  data-testid="digit-9"
                  tabindex="0"
                >
                  9
                  <div
                    class="details"
                  >
                    WXYZ
                  </div>
                </div>
              </div>
              <div
                class="row"
              >
                <div
                  class="digit"
                  data-digit="*"
                  data-testid="digit-*"
                  tabindex="0"
                >
                  *
                </div>
                <div
                  class="digit"
                  data-digit="0"
                  data-testid="digit-0"
                  tabindex="0"
                >
                  0
                  <div
                    class="details"
                  >
                    +
                  </div>
                </div>
                <div
                  class="digit"
                  data-digit="#"
                  data-testid="digit-#"
                  tabindex="0"
                >
                  #
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="arrow"
        />
      </div>
    </div>
  </div>,
]
`;
